--- a/charities/templates/charities/charity_detail.html
+++ b/charities/templates/charities/charity_detail.html
@@ -8,14 +8,14 @@
 {% block extra_title %}{charity-details}{% endblock %}
 
 {% block content %}
-    <div class="container pt-5">
+    <div class="container pt-2 pt-md-5">
         <div class="row">
             <!-- charity general image / swaps to order 2nd on screens >= 992px wide -->
             <div class="col-12 col-lg-6 order-lg-2">
                 <div class="row">
                     <div class="col-12">
-                        <img src="{{charity.image_url}}" alt="{{charity.image_description|linebreaksbr }}"
-                            class="charity-general-img m-0 p-0">
+                        <img src="{{charity.image_url}}" alt="{{ charity.image_description }}"
+                            class="charity-general-img">
                     </div>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 <!-- charity name and register number -->
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="bold text-dark">{{charity.charity_name}}</h1>
+                        <h1 class="bold text-pink">{{charity.charity_name}}</h1>
                         <p>Registered charity number {{charity.charity_num}}</p>
                     </div>
                 </div>
@@ -38,6 +38,24 @@
                 <div class="row">
                     <div class="col-12">
                         <p class="text-dark">{{charity.description|linebreaksbr }}</p>
+                    </div>
+                </div>
+            </div>
+        </div> 
+        <div class="card mb-3">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="{% static '/media/' %}{{ charity.logo_image }}" alt="{{ charity.charity_name }} logo"
+                        class="bg-white impact-card-img">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body bg-pink-light">
+                        <h5 class="card-title text-dark bold">Donation Impact</h5>
+                        <ul>
+                            <li class="text-dark mb-1">{{ charity.impact1 }}<hr></li>
+                            <li class="text-dark mb-1">{{ charity.impact2 }}<hr></li>
+                            <li class="text-dark mb-1">{{ charity.impact3 }}</li>
+                        </ul>
                     </div>
                 </div>
             </div>
