--- a/charities/templates/charities/charities.html
+++ b/charities/templates/charities/charities.html
@@ -17,8 +17,8 @@
                 {% else %}
                 <!-- prompt user to signup/signin to use favourites feature -->
                 <h3 class="text-dark charities-signup-prompt my-2">
-                    <a class="a-pink" href="{% url 'account_signup' %}">Sign up</a>, or 
-                    <a class="a-pink"href="{% url 'account_login' %}">Log in </a>to start bookmarking your favourites.
+                    <a href="{% url 'account_signup' %}" aria-label="link to sign up" class="a-pink">Sign up</a>, or 
+                    <a href="{% url 'account_login' %}" aria-label="link to log in" class="a-pink">Log in </a>to start bookmarking your favourites.
                 </h3>
                 {% endif %}
             </div>
@@ -26,25 +26,32 @@
         <!-- searchbar -->
         {% include 'charities/includes/search-filters.html' %}
     </div>
+    <!-- categories dropdown menu -->
     <div class="container">
-        <!-- categories dropdown menu -->
         <div class="row bg-light-brand justify-content-between m-0 p-0">
             <button class="dropdown-toggle btn btn-lg btn-pink-outline shadow-sm order-sm-2 col-12 col-sm-6 col-lg-3 my-1"
                 type="button" data-toggle="dropdown" aria-expanded="false">
                 Categories
             </button>
             <div class="dropdown-menu categories-btn dropdown-menu-right bg-pink-light">
-                <a href="{% url 'charities' %}" class="dropdown-item drop-item-h bg-pink-light bold">All Categories</a>
-                <a href="{% url 'charities' %}?category=animals_wildlife" class="dropdown-item drop-item-h bg-pink-light bold">Animals &amp; Wildlife</a>
-                <a href="{% url 'charities' %}?category=children_youth" class="dropdown-item drop-item-h bg-pink-light bold">Children &amp; Youth</a>
-                <a href="{% url 'charities' %}?category=aged" class="dropdown-item drop-item-h bg-pink-light bold">Aged</a>
-                <a href="{% url 'charities' %}?category=disability" class="dropdown-item drop-item-h bg-pink-light bold">Disability</a>
-                <a href="{% url 'charities' %}?category=mental_health" class="dropdown-item drop-item-h bg-pink-light bold">Mental Health</a>
+                <a href="{% url 'charities' %}" aria-label="show all categories"
+                    class="dropdown-item drop-item-h bg-pink-light bold">All Categories</a>
+                <a href="{% url 'charities' %}?category=animals_wildlife" aria-label="show animal & wildlife categories"
+                    class="dropdown-item drop-item-h bg-pink-light bold">Animals &amp; Wildlife</a>
+                <a href="{% url 'charities' %}?category=children_youth" aria-label="show children & youth categories"
+                    class="dropdown-item drop-item-h bg-pink-light bold">Children &amp; Youth</a>
+                <a href="{% url 'charities' %}?category=aged" aria-label="show aged categories"
+                    class="dropdown-item drop-item-h bg-pink-light bold">Aged</a>
+                <a href="{% url 'charities' %}?category=disability" aria-label="show disability categories"
+                    class="dropdown-item drop-item-h bg-pink-light bold">Disability</a>
+                <a href="{% url 'charities' %}?category=mental_health" aria-label="show mental health categories"
+                    class="dropdown-item drop-item-h bg-pink-light bold">Mental Health</a>
             </div>
             <!-- user feedback on number of charities filters -->
             <p class="char-len charities-title text-dark order-sm-1 my-1 p-0 col-12 col-sm-6 pt-2">{{ charities|length }} Charities Found</p>
         </div>
     </div>
+    <!-- loop through charities and display an info cards -->
     <div class="container">
         {% if charities|length > 0 %}
         <div class="row mb-5">
@@ -52,11 +59,17 @@
             <div class="col-12 px-xs-0 col-md-6 col-xl-4 my-4 text-center">
                 <a href="{% url 'charity_detail' charity.id %}" aria-hidden="true" tabindex="-1">
                     <div class="card charity-card hover-float shadow bg-light-brand text-center mx-auto">
-                        <img src="{% static '/media/' %}{{ charity.logo_image }}" alt="{{charity.charity_name}} logo"
-                            class="card-img-top charity-card-img">
+                        {% if charity.logo_image %}
+                            <img src="{% static '/media/' %}{{ charity.logo_image }}" alt="{{ charity.charity_name }} logo"
+                                class="card-img-top charity-card-img">
+                        {% else %}
+                            <img src="{% static '/media/no-img.jpg' %}" alt="{{ charity.charity_name }}"
+                                class="card-img-top charity-card-img">
+                        {% endif %}
                         <h3 class="card-text charity-card-title text-dark bold p-2 mt-1">{{ charity.charity_name }}</h3>
                         <div class="charity-card-btn-box">
-                            <a href="{% url 'charity_detail' charity.id %}" class="btn btn-lg btn-pink-outline charity-card-btn">Info</a>
+                            <a href="{% url 'charity_detail' charity.id %}" aria-label="link to charity page"
+                                class="btn btn-lg btn-pink-outline charity-card-btn">Info</a>
                             <button class="btn btn-lg btn-pink-outline charity-card-btn">Favourite</button>
                         </div>
                     </div>
@@ -65,9 +78,11 @@
             {% endfor %}
         </div>
         {% else %}
+        <!-- if no charities found with searchbar - error message -->
         <div class="row">
             <h4 class="col-12 text-center text-pink bold my-4">Oops! No charities matching your search found.</h4>
-            <a href="{% url 'charities' %}" class="btn btn-lg btn-pink col-11 col-sm-6 col-xl-2 mb-5 mx-auto">
+            <a href="{% url 'charities' %}" aria-label="link to charities page"
+                class="btn btn-lg btn-pink col-11 col-sm-6 col-xl-2 mb-5 mx-auto">
                 <i class="fa-solid fa-chevron-left mx-1"></i><strong>Back</strong>
             </a>
         </div>
