--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,8 +6,10 @@
 {% endblock %}
 
 {% block content %}
+<!-- hero image and text -->
 <div class="container-fluid p-0 m-0">
     <div class="row p-0 m-0">
+        <!-- hero image -->
         <img id="hero-img" class="col-12 d-none d-lg-block" src="{% static '/media/hero-img.png' %}" center no-repeat>
         <img id="hero-img-sm" class="col-12 d-block d-lg-none" src="{% static '/media/hero-img-small.png' %}" center no-repeat>
         <!-- Displays on screens with min-width >= 992px -->
@@ -20,7 +22,8 @@
             </p>
             {% if request.user.is_authenticated %}
             {% else %}
-                <a class="d-none d-lg-block col-md-3 col-lg-4 btn btn-lg btn-white mb-3" href="{% url 'account_login' %}">Sign up / Login</a>
+                <a href="{% url 'account_login' %}" aria-label="link to log in"
+                    class="d-none d-lg-block col-md-3 col-lg-4 btn btn-lg btn-white mb-3">Sign up / Login</a>
             {% endif %}
         </div>
     </div>
@@ -29,7 +32,8 @@
         <h2 class="col-12 bold text-pink mx-auto">Spreading affordable support, to your causes, your way.</h2>
         {% if request.user.is_authenticated %}
         {% else %}
-            <a class="col-10 col-sm-6 btn btn-lg btn-pink mb-5" href="{% url 'account_login' %}">Sign up / Login</a>
+            <a href="{% url 'account_login' %}" aria-label="link to log in"
+                class="col-10 col-sm-6 btn btn-lg btn-pink mb-5">Sign up / Login</a>
         {% endif %}
         <h3 class="col-12 text-center text-pink">“Alone we can do so little; together we can do so much.”<br>- Helen Keller</h3>
         <p class="text-center text-dark px-3">
@@ -67,33 +71,27 @@
         </div>
     </div>
     <div class="row bg-pink-light justify-content-center pb-4 mx-auto mb-5">
+        <!-- find your charities card -->
         <div class="col-12 col-md-4 col-xl-3 text-center">
             <div class="card stat-card mb-2">
-                {% if request.user.is_authenticated %}
-                <a href="" class="card-body card-white text-center">
+                <a href="{% url 'charities' %}" aria-label="" class="card-body card-white text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-magnifying-glass"></i></div>
                     <h3 class="bold">Find your charities</h3>
                     <p>Find charities that matter to you and add them to your Donofy favourites</p>
                 </a>
-                {% else %}
-                <a href="{% url 'account_login' %}" class="card-body card-white stat-card text-center">
-                    <div><i class="card-icon icon-lg icon-pink fa-solid fa-magnifying-glass"></i></div>
-                    <h3 class="bold">Find your charities</h3>
-                    <p>Find charities that matter to you and add them to your Donofy favourites</p>
-                </a>
-                {% endif %}
             </div>
         </div>
+        <!-- set a donation amount card -->
         <div class="col-12 col-md-4 col-xl-3 text-center">
             <div class="card stat-card mb-2">
                 {% if request.user.is_authenticated %}
-                <a href="#" class="card-body card-white text-center">
+                <a href="#" aria-label="link to profile" class="card-body card-white text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-gear"></i></div>
                     <h3 class="bold">Set a donation amount</h3>
                     <p>Choose how much you want to donate to each of your charities</p>
                 </a>
                 {% else %}
-                <a href="{% url 'account_login' %}" class="card-body card-white stat-card text-center">
+                <a href="{% url 'account_login' %}" aria-label="link to log in" class="card-body card-white stat-card text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-gear"></i></div>
                     <h3 class="bold">Set a donation amount</h3>
                     <p>Choose how much you want to donate to each of your charities</p>
@@ -101,16 +99,17 @@
                 {% endif %}
             </div>
         </div>
+        <!-- make an impact card -->
         <div class="col-12 col-md-4 col-xl-3 text-center">
             <div class="card stat-card mb-2">
                 {% if request.user.is_authenticated %}
-                <a href="#" class="card-body card-white text-center">
+                <a href="#" aria-label="link to profile" class="card-body card-white text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-chart-line"></i></div>
                     <h3 id="impact-header" class="bold">Make an impact</h3>
                     <p>Track the impact your financial support has made</p>
                 </a>
                 {% else %}
-                <a href="{% url 'account_login' %}" class="card-body card-white stat-card text-center">
+                <a href="{% url 'account_login' %}" aria-label="link to log in" class="card-body card-white stat-card text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-chart-line"></i></div>
                     <h3 id="impact-header" class="bold">Make an impact</h3>
                     <p>Track the impact your financial support has made</p>
@@ -128,7 +127,8 @@
                 <div class="card-body text-center px-2 py-5 p-md-4 mx-auto">
                     <h3 class="text-white bold">Join Donofy today</h3>
                     <p class="text-white">Support the charities and causes you care about, your way.</p>
-                    <a class="btn btn-lg btn-white" href="{% url 'account_signup' %}">Sign Up</a>
+                    <a href="{% url 'account_signup' %}" aria-label="link to sign up"
+                        class="btn btn-lg btn-white">Sign Up</a>
                 </div>
             </div>
         </div>
