--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,9 +14,31 @@
                 <h1 class="text-pink">Profile Page works</h1>
             </div>
         </div>
+
+        <!-- nav tabs -->
+        <nav>
+            <div class="nav nav-tabs shadow flex-column flex-md-row" id="nav-tab" role="tablist">
+                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold active" id="myDonofy-tab" data-toggle="tab" data-target="#nav-myDonofy" type="button" role="tab" aria-controls="nav-manage" aria-selected="true">Manage My Donofy</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold" id="nav-myImpact-tab" data-toggle="tab" data-target="#nav-myImpact" type="button" role="tab" aria-controls="nav-impact" aria-selected="false">My Impact</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold" id="nav-myDetails-tab" data-toggle="tab" data-target="#nav-myDetails" type="button" role="tab" aria-controls="nav-details" aria-selected="false">My Details</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold" id="nav-myHistory-tab" data-toggle="tab" data-target="#nav-myHistory" type="button" role="tab" aria-controls="nav-history" aria-selected="false">My Payment History</button>
+            </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-myDonofy" role="tabpanel" aria-labelledby="nav-manage-tab"><p>Manage My Donofy</p></div>
+            <div class="tab-pane fade" id="nav-myImpact" role="tabpanel" aria-labelledby="nav-manage-tab"><p> Impact</p></div>
+            <div class="tab-pane fade" id="nav-myDetails" role="tabpanel" aria-labelledby="nav-impact-tab"><p> Details</p></div>
+            <div class="tab-pane fade" id="nav-myHistory" role="tabpanel" aria-labelledby="nav-history-tab"><p> Payment History</p></div>
+        </div>
     </div>
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
+    <script>
+        $('a[data-toggle="list"]').on('shown.bs.tab', function (event) {
+            event.target
+            event.relatedTarget
+        })
+    </script>
 {% endblock %}
