--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -5,7 +5,11 @@
 
 .profile-tabs.nav-link.active,
 .profile-tabs.nav-link.focus {
-    color: #222;
-    background-color: #D2BDED;
+    color: #fff;
+    background-color: #CD2678;
     border-color: #fff;
+}
+
+.tab-title {
+    font-size: 1.2rem;
 }
