--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -1,3 +1,10 @@
-<h2 class="tab-title bold">My Details</h2>
-
-<!-- user personal details form -->
+<h2 class="tab-title text-pink bold col-12 col-lg-8 mx-auto px-1">Review / edit your billing details here.</h2>
+<p class="text-dark col-12 col-lg-8 mx-auto px-1">( Full profile info is required to have an active donation subscription. )</p>
+<div class="row">
+    <form action="{% url 'profile' %}" method="POST" class="profile-forms col-12 col-lg-8 mx-auto">
+        {% csrf_token %}
+        {{ user_form|crispy }}
+        {{ user_profile_form|crispy }}
+        <button type="submit" class="btn btn-lg btn-pink col-12 col-md-5">Save Changes</button>
+    </form>
+</div>
