add: some styling  edits to profiles pages

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-pink">User Profile</h1>
+                <h1 class="text-pink bold profile-title text-capitalize my-3">Donofy Profile Managment: {{ user.username }}</h1>
             </div>
         </div>
 
         <!-- nav tabs -->
         <nav>
             <div class="nav nav-tabs flex-column flex-md-row" id="nav-tab" role="tablist">
-                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold active" id="myDonofy-tab" data-toggle="tab" data-target="#nav-myDonofy" type="button" role="tab" aria-controls="nav-manage" aria-selected="true">Manage My Donofy</button>
-                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold" id="nav-myImpact-tab" data-toggle="tab" data-target="#nav-myImpact" type="button" role="tab" aria-controls="nav-impact" aria-selected="false">My Impact</button>
-                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold" id="nav-myDetails-tab" data-toggle="tab" data-target="#nav-myDetails" type="button" role="tab" aria-controls="nav-details" aria-selected="false">My Details</button>
-                <button class="nav-link flex-md-fill text-md-center profile-tabs text-pink bold" id="nav-myHistory-tab" data-toggle="tab" data-target="#nav-myHistory" type="button" role="tab" aria-controls="nav-history" aria-selected="false">My Payment History</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink bold active" id="myDonofy-tab" data-toggle="tab" data-target="#nav-myDonofy" type="button" role="tab" aria-controls="nav-manage" aria-selected="true">Manage My Donofy</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink bold" id="nav-myImpact-tab" data-toggle="tab" data-target="#nav-myImpact" type="button" role="tab" aria-controls="nav-impact" aria-selected="false">My Impact</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink bold" id="nav-myDetails-tab" data-toggle="tab" data-target="#nav-myDetails" type="button" role="tab" aria-controls="nav-details" aria-selected="false">My Details</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink bold" id="nav-myHistory-tab" data-toggle="tab" data-target="#nav-myHistory" type="button" role="tab" aria-controls="nav-history" aria-selected="false">My Payment History</button>
             </div>
         </nav>
         <div class="tab-content shadow p-4 mb-5" id="nav-tabContent">
