--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,3 +1,8 @@
+h1.profile-title {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+}
+
 .profile-tabs {
     height: 3rem;
     background-color: #f6f6f6;
@@ -12,4 +17,15 @@
 
 .tab-title {
     font-size: 1.2rem;
+}
+
+.profile-forms label {
+    color: #CD2678;
+}
+
+@media screen and (min-width: 320px) and (max-width: 575px) {
+    h1.profile-title {
+        font-size: 1.2rem;
+        line-height: 1.2rem;
+    }
 }
