--- a/templates/base.html
+++ b/templates/base.html
@@ -52,25 +52,25 @@
 			<ul class="navbar-nav">
 				<li class="nav-item">
 				<a href="{% url 'home' %}" aria-label="link to home page"
-					class="nav-link drop-item-h text-pink bold">Home</a>
+					class="nav-link drop-item-h text-pink bold hover-float">Home</a>
 				</li>
 				<li class="nav-item">
 				<a href="{% url 'charities' %}" aria-label="link to charities page"
-					class="nav-link drop-item-h text-pink bold">Charities</a>
+					class="nav-link drop-item-h text-pink bold hover-float">Charities</a>
 				</li>
 				<li class="nav-item">
 				<a href="#" aria-label="link to F A Q page"
-					class="nav-link drop-item-h text-pink bold">Contact Us</a>
+					class="nav-link drop-item-h text-pink bold hover-float">Contact Us</a>
 				</li>
 				<li class="nav-item dropdown text-pink bold">
 				<a href="#" aria-label="my account dropdown menu" id="user-options" aria-expanded="false"
-					class="nav-link drop-item-h text-pink bold dropdown-toggle" role="button" data-toggle="dropdown">
+					class="nav-link drop-item-h text-pink bold hover-float dropdown-toggle" role="button" data-toggle="dropdown">
 					My Account
 				</a>
 				<div class="dropdown-menu dropdown-menu-right shadow bold" aria-labelledby="user-options">
 					{% if request.user.is_authenticated %}
 					<a href="{% url 'profile' %}" aria-label="link to my profile page"
-						class="dropdown-item drop-item-h text-pink bold">My Profile</a>
+						class="dropdown-item drop-item-h text-pink bold hover-float">My Profile</a>
 					<a href="{% url 'account_logout' %}" aria-label="link to logout page"
 						class="dropdown-item drop-item-h text-pink bold">Logout</a>
 					{% else %}
