add: w-100 to Favourites button

--- a/charities/templates/charities/charity_detail.html
+++ b/charities/templates/charities/charity_detail.html
@@ -67,7 +67,7 @@
             {% if request.user.is_authenticated %}
                 <div class="col-12 col-lg-6">
                     <a href="#" aria-label="add to favourites link for logged in users only"
-                        class="btn btn-lg btn-pink my-3 shadow">+ Add to Favourties</a>
+                        class="btn btn-lg btn-pink w-100 my-3 shadow">+ Add to Favourties</a>
                 </div>
             {% else %}
                 <!-- send to log in if no user -->
