--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 					class="nav-link drop-item-h text-pink bold hover-float">Charities</a>
 				</li>
 				<li class="nav-item">
-				<a href="#" aria-label="link to F A Q page"
+				<a href="#" aria-label="link to contact us page"
 					class="nav-link drop-item-h text-pink bold hover-float">Contact Us</a>
 				</li>
 				<li class="nav-item dropdown text-pink bold">
