--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -23,6 +23,10 @@ h1.profile-title {
     color: #CD2678;
 }
 
+.favourites-list {
+    list-style-type: none;
+}
+
 @media screen and (min-width: 320px) and (max-width: 575px) {
     h1.profile-title {
         font-size: 1.2rem;
