--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -1,14 +1,22 @@
-{% if user_profile.charity_favs %}
-    <h2 class="tab-title text-pink bold col-12 col-lg-8 mx-auto px-1">Manage My Donofy</h2>
+{% if charity_favs %}
+    <h2 class="tab-title text-capitalize bold col-12 col-lg-8 mx-auto px-1">Hi {{ user.username }}</h2>
     <p class="text-dark col-12 col-lg-8 mx-auto px-1">
         Allocate a monthly donation to your favourited charities here.<br>
         Values can be set to zero.<br>
     </p>
+    <h2 class="tab-title text-capitalize text-pink bold col-12 col-lg-8 mx-auto px-1">Your Favourited Charities</h2>
     <form action="#" method="POST" class="col-12 col-lg-8 mx-auto mb-5">
         {% csrf_token %}
-        <ul>
+        <ul class="favourites-list p-0">
             {% for charity in charity_favs %}
-                <li>{{ charity.charity_name }}</li>
+            <div class="row">
+                <li class="col-12 bold mb-5">
+                    <hr>
+                    {{ charity.charity_name }}
+                    <p class="text-small text-muted mb-0">Charity number: ({{ charity.charity_num}})</p>
+                    <a href="#" class="a-pink">Remove from favourites</a>
+                </li>
+            </div>
             {% endfor %}
         </ul>
     </form>
