--- a/templates/base.html
+++ b/templates/base.html
@@ -69,15 +69,28 @@
 				</a>
 				<div class="dropdown-menu dropdown-menu-right shadow bold" aria-labelledby="user-options">
 					{% if request.user.is_authenticated %}
-					<a href="{% url 'profile' %}" aria-label="link to my profile page"
-						class="dropdown-item drop-item-h text-pink bold hover-float">My Profile</a>
+					<a href="{% url 'profile' %}?tab=myDonofy" aria-label="link to my my donofy page"
+						class="dropdown-item drop-item-h text-pink bold hover-float">My Donofy
+					</a>
+					<a href="{% url 'profile' %}?tab=myImpact" aria-label="link to my impact page"
+						class="dropdown-item drop-item-h text-pink bold hover-float">My Impact
+					</a>
+					<a href="{% url 'profile' %}?tab=myDetails" aria-label="link to my details page"
+						class="dropdown-item drop-item-h text-pink bold hover-float">My Details
+					</a>
+					<a href="{% url 'profile' %}?tab=myHistory" aria-label="link to my payments page"
+						class="dropdown-item drop-item-h text-pink bold hover-float">My Payments
+					</a>
 					<a href="{% url 'account_logout' %}" aria-label="link to logout page"
-						class="dropdown-item drop-item-h text-pink bold">Logout</a>
+						class="dropdown-item drop-item-h text-pink bold">Logout
+					</a>
 					{% else %}
 					<a href="{% url 'account_signup' %}" aria-label="link to register page"
-						class="dropdown-item drop-item-h text-pink bold">Register</a>
+						class="dropdown-item drop-item-h text-pink bold">Register
+					</a>
 					<a href="{% url 'account_login' %}" aria-label="link to log in page"
-						class="dropdown-item drop-item-h text-pink bold">Login</a>
+						class="dropdown-item drop-item-h text-pink bold">Login
+					</a>
 					{% endif %}
 				</div>
 				</li>
