--- a/templates/base.html
+++ b/templates/base.html
@@ -69,16 +69,16 @@
 				</a>
 				<div class="dropdown-menu dropdown-menu-right shadow bold" aria-labelledby="user-options">
 					{% if request.user.is_authenticated %}
-					<a href="{% url 'profile' %}?tab=myDonofy" aria-label="link to my my donofy page"
+					<a href="{% url 'profiles:profile' %}?tab=myDonofy" aria-label="link to my my donofy page"
 						class="dropdown-item drop-item-h text-pink bold hover-float">My Donofy
 					</a>
-					<a href="{% url 'profile' %}?tab=myImpact" aria-label="link to my impact page"
+					<a href="{% url 'profiles:profile' %}?tab=myImpact" aria-label="link to my impact page"
 						class="dropdown-item drop-item-h text-pink bold hover-float">My Impact
 					</a>
-					<a href="{% url 'profile' %}?tab=myDetails" aria-label="link to my details page"
+					<a href="{% url 'profiles:profile' %}?tab=myDetails" aria-label="link to my details page"
 						class="dropdown-item drop-item-h text-pink bold hover-float">My Details
 					</a>
-					<a href="{% url 'profile' %}?tab=myHistory" aria-label="link to my payments page"
+					<a href="{% url 'profiles:profile' %}?tab=myHistory" aria-label="link to my payments page"
 						class="dropdown-item drop-item-h text-pink bold hover-float">My Payments
 					</a>
 					<a href="{% url 'account_logout' %}" aria-label="link to logout page"
