--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -1,11 +1,19 @@
 {% if charity_favs %}
     <h2 class="tab-title text-capitalize bold col-12 col-lg-8 mx-auto px-1">Hi {{ user.username }}</h2>
     {% if subscription.sub_active %}
-        <p class="text-pink bold col-12 col-lg-8 mx-auto mb-0 px-1">Your Subscription Is Active</p>
+        <h2 class="text-pink bold col-12 col-lg-8 mx-auto px-1">Your Subscription Is Active </h2>
         <p class="text-muted col-12 col-lg-8 mx-auto px-1">You will donate on the 1st of every month, according to your settings below.</p>
-        {% else %}
-            <p class="text-pink bold col-12 col-lg-8 mx-auto mb-0 px-1"><span><i class="fa-solid fa-circle-exclamation icon-pink"></i></span> Your donations are currently paused</p>
-            <p class="text-muted col-12 col-lg-8 mx-auto px-1">No donations will be taken whilst your account is set to inactive</p>
+        <form href="{% url 'subscriptions:toggle_subscription_active' %}" method="POST" class="col-12 col-lg-8 mx-auto p-0 mt-2 mb-4">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-lg btn-pink-outline col-12 col-md-6 shadow">Pause Subscription</button>
+        </form>
+    {% else %}
+        <h2 class="text-pink bold col-12 col-lg-8 mx-auto mb-0 px-1"><span><i class="fa-solid fa-circle-exclamation icon-pink"></i></span> Your donations are currently paused</h2>
+        <p class="text-muted col-12 col-lg-8 mx-auto px-1">No donations will be taken whilst your subscription is set to inactive</p>
+        <form href="{% url 'subscriptions:toggle_subscription_active' %}" method="POST" class="col-12 col-lg-8 mx-auto p-0 mt-2 mb-4">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-lg btn-pink-outline col-12 col-md-6 shadow">Activate Subscription</button>
+        </form>
     {% endif %}
     <h2 class="tab-title text-capitalize text-white bg-pink bold col-12 col-lg-8 pl-2 py-2 mx-auto px-1">Your Favourited Charities</h2>
     <form action="#" method="POST" class="col-12 col-lg-8 mx-auto mb-5">
@@ -24,12 +32,20 @@
                     <p class="text-small text-muted mb-0">Charity number: ({{ charity.charity_num}})</p>
                     <a href="#" class="a-pink">Remove from favourites</a>
                 </li>
-                <div class="col">
-
+                <!-- add an if statement HERE to check for a currently saved sub_breakdown, prepopulate the inputs with the user's last saved values. -->
+                <div class="col-12">
+                    <input type="number" name="breakdown" value="0" min="0" max="999" data-item-id="{{ charity.id }}">
                 </div>
             </div>
             {% endfor %}
+            <hr>
+            <button type="submit" class="btn btn-lg btn-pink mt-3">Save</button>
         </ul>
+        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+    </form>
+    <form href="{% url 'subscriptions:toggle_subscription_active' %}" method="POST" class="justify-content-end col-lg-6 p-0 m-0">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-lg btn-pink-outline">Pause Subscription</button>
     </form>
 {% else %}
     <h3 class="text-pink col-12 col-lg-8 mx-auto mt-4 px-1">
