add: link to new js file in postloadjs, + JSON script for stripe keys

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -47,6 +47,8 @@
 
 {% block postloadjs %}
     {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
     <script>
         $(document).ready(function() {
             var activeTab = "{{ active_tab }}";
@@ -62,4 +64,5 @@
             });
         });
     </script>
+    <script src="{% static 'profiles/js/stripe_elements.js' %}"></script>
 {% endblock %}
