add: a section for the card details to go and some additional info beneath the save button

--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -5,6 +5,18 @@
         {% csrf_token %}
         {{ user_form|crispy }}
         {{ user_profile_form|crispy }}
-        <button type="submit" class="btn btn-lg btn-pink col-12 col-md-5">Save Changes</button>
+        <fieldset class="px-3">
+            <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+            <!-- A Stripe card element will go here -->
+            <div class="mb-3" id="card-element"></div>
+            <!-- Used to display form errors -->
+            <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+            <!-- Pass the client secret to the view so we can get the payment intent id -->
+            <input type="hidden" value="{{ client_secret }}" name="client_secret">
+        </fieldset>
+        <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Changes</button>
+        <p class="text-dark my-0"><i class="icon fas fa-exclamation-circle"></i> Please ensure all billing information is correct.</p>
+        <p class="text-dark mb-0">Your donation will be taken on the 1st of every month whilst your subscription is active.</p>
+        <p class="text-dark mb-0">To edit, or pause your subscription, please go to Manage My Donofy</p>
     </form>
 </div>
