--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -27,6 +27,15 @@ h1.profile-title {
     list-style-type: none;
 }
 
+#icon-green {
+    padding: 0;
+    margin: 0;
+    color: #3C8E2E!important;
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+}
+
 /* STRIPE */
 .StripeElement {
     box-sizing: border-box;
