chore: tidies up stripe payment templates and styles to match the rest of the form

--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -41,8 +41,8 @@ h1.profile-title {
     box-sizing: border-box;
     height: 40px;
     padding: 10px 12px;
-    border: 1px solid transparent;
-    border-radius: 1.5rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.2rem;
     background-color: white;
     box-shadow: 0 1px 3px 0 #e6ebf1;
     -webkit-transition: box-shadow 150ms ease;
@@ -71,7 +71,7 @@ h1.profile-title {
 #payment-form .form-control,
 #card-element {
     color: #000;
-    border: 1px solid #000;
+    border: 1px solid #ced4da;
 }
 
 @media screen and (min-width: 320px) and (max-width: 575px) {
