--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,4 +1,5 @@
-h1.profile-title {
+h1.profile-title,
+.your-total {
     font-size: 1.5rem;
     line-height: 1.5rem;
 }
@@ -34,6 +35,10 @@ h1.profile-title {
     align-items: center;
     display: inline-flex;
     justify-content: center;
+}
+
+.your-total {
+    border: 1px solid #CD2678;
 }
 
 /* STRIPE */
@@ -75,7 +80,8 @@ h1.profile-title {
 }
 
 @media screen and (min-width: 320px) and (max-width: 575px) {
-    h1.profile-title {
+    h1.profile-title,
+    .your-total {
         font-size: 1.2rem;
         line-height: 1.2rem;
     }
